--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -16,6 +16,7 @@
 	position: absolute;
 	bottom: 22px;
 
+	max-height: 92%;
 	padding: 0;
 	margin: 0;
 
@@ -25,6 +26,10 @@
 	font-weight: normal;
 	letter-spacing: 0.5px;
 	color: @white;
+
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 
 	writing-mode: vertical-lr;
 	transform: rotate(180deg);
